--- a/app/assets/stylesheets/layout/_work_package_mobile.sass
+++ b/app/assets/stylesheets/layout/_work_package_mobile.sass
@@ -106,6 +106,7 @@
 
     .toolbar-container
       min-height: 36px
+      padding-right: 0
 
     .attributes-key-value--key,
     .attributes-key-value--value-container
